@@ -1,3 +1,5 @@
+HEAD
+	+ Better default settings of performance tuning when using ActiveSync
 5.0.2
 	+ Use IMAPS if IMAP is disabled in mail retrieval services
 5.0.1
